# rasm-software

./: .gitignore  LICENSE  README  installation-instructions.txt  main.cpp  makefile  notes.txt  temporary_main.cpp  vision.py
arduino_extra/: common.h
arduino_extra/manually_move_the_motors/: manually_move_the_motors.ino
arduino_extra/rosPublisherSubscriber/: rosPublisherSubscriber.ino
arduino_main/: arduino_main.ino
include/vision/: image_buffers.hpp  pose_estimation.hpp  pose_estimation_base.hpp  test_file.cpp  vision.cpp
motion-planning/: linearTransformationDHParameters.m
motion-planning/cameraPosition/: cameraPosition.ino
motion-planning/demo_cameraPosition_code/: demo_cameraPosition_code.ino
motion-planning/elbowPosition/: elbowPosition.ino
motion-planning/sendJointPositions/: sendJointPositions.ino
motion-planning/shoulderAngle/: shoulderAngle.ino
motion-planning/shoulderPosition/: shoulderPosition.ino
motion-planning/wristPosition/: wristPosition.ino
motion-planning/ws_moveit/: rasm.urdf  rasm.urdf.xacro
old-software/: README.md  TODO  VERSION
old-software/analyze/: README.md
old-software/include/: README.md  battery.hpp  configuration.hpp  logging.hpp  time.hpp
old-software/include/control/: control.hpp  definitions.hpp  (+5 more)
old-software/src/: README.md  camera_calibration.cpp  localshell.cpp  rasmmain.cpp
python/: setup.py  tempfile2
test/filesysroot/rasm_2_1/data/vision/detection/images/: CMakeLists.txt  concentric_circle_detector.svm  create_detector.cpp  detector.svm  testing_data.xml  training.xml  training_data.xml
(+70 files in other folders)
